tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:171:23: error: incompatible types when assigning to type ‘int’ from type ‘struct <anonymous>’
  171 |     tmp6.data[tmp7] = g;
      |                       ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:182:34: error: request for member ‘items’ in something not a structure or union
  182 |     for (int tmp11 = 0; tmp11 < g.items.len; tmp11++) {
      |                                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:183:21: error: request for member ‘items’ in something not a structure or union
  183 |       DataItem x = g.items.data[tmp11];
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:187:38: error: request for member ‘key’ in something not a structure or union
  187 |     map_int_bool_put(&tmp12, "tag", g.key);
      |                                      ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:187:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  187 |     map_int_bool_put(&tmp12, "tag", g.key);
      |                              ^~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:63:51: note: expected ‘int’ but argument is of type ‘char *’
   63 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:188:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  188 |     map_int_bool_put(&tmp12, "total", total);
      |                              ^~~~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:63:51: note: expected ‘int’ but argument is of type ‘char *’
   63 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:189:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  189 |     tmp = 0;
      |           ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:197:21: error: request for member ‘tag’ in something not a structure or union
  197 |     tmp16[tmp14] = r.tag;
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:214:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_int’ [-Wformat=]
  214 |   printf("%d\n", result);
      |           ~^     ~~~~~~
      |            |     |
      |            int   list_int

   1: #include <stdio.h>
